# thermal_parser

./: README.md  pyproject.toml  quick_start.ipynb  requirements.txt
thermal_parser/: thermal.py
